deleted unnecessary imports

--- a/evaluation/rcf_algorithms_contour_area_comparison.ipynb
+++ b/evaluation/rcf_algorithms_contour_area_comparison.ipynb
@@ -23,7 +23,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import area_comparison as ac\n",
     "import general_functions as gf"
    ]
   },
@@ -43,10 +42,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib as mpl\n",
-    "import glob\n",
-    "import shapely"
+    "import glob"
    ]
   },
   {
