--- a/evaluation/RCF_Hausdorff_Chamfer.ipynb
+++ b/evaluation/RCF_Hausdorff_Chamfer.ipynb
@@ -23,8 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import area_comparison as ac\n",
-    "import general_functions as gf"
+    "import area_comparison as ac"
    ]
   },
   {
@@ -46,9 +45,7 @@
     "import numpy as np\n",
     "from skimage.draw import line, polygon\n",
     "from scipy.spatial.distance import cdist\n",
-    "import glob\n",
-    "import cv2\n",
-    "import shapely"
+    "import cv2"
    ]
   },
   {
